--- a/Code/BT-LoadingController.xib
+++ b/Code/BT-LoadingController.xib
@@ -43,16 +43,16 @@
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIView" id="573838495">
+					<object class="IBUIView" id="151378865">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">301</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUILabel" id="769932284">
-								<reference key="NSNextResponder" ref="573838495"/>
+							<object class="IBUILabel" id="265403529">
+								<reference key="NSNextResponder" ref="151378865"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 67}, {108, 21}}</string>
-								<reference key="NSSuperview" ref="573838495"/>
+								<reference key="NSSuperview" ref="151378865"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -82,11 +82,11 @@
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
 							</object>
-							<object class="IBUIActivityIndicatorView" id="745581643">
-								<reference key="NSNextResponder" ref="573838495"/>
+							<object class="IBUIActivityIndicatorView" id="319154164">
+								<reference key="NSNextResponder" ref="151378865"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{56, 24}, {37, 37}}</string>
-								<reference key="NSSuperview" ref="573838495"/>
+								<reference key="NSSuperview" ref="151378865"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:824</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -102,7 +102,7 @@
 						<string key="NSReuseIdentifierKey">_NS:180</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAgMC44AA</bytes>
+							<bytes key="NSRGB">MCAwIDAgMC45AA</bytes>
 						</object>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -114,10 +114,9 @@
 				<reference key="NSNextKeyView"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
+					<bytes key="NSWhite">MC4zMzMzMzMzMzMzIDAuNwA</bytes>
 				</object>
 				<bool key="IBUIOpaque">NO</bool>
-				<float key="IBUIAlpha">0.5</float>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</object>
@@ -131,6 +130,14 @@
 						<reference key="destination" ref="191373211"/>
 					</object>
 					<int key="connectionID">3</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">blackSquare</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="151378865"/>
+					</object>
+					<int key="connectionID">7</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -147,7 +154,7 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="573838495"/>
+							<reference ref="151378865"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -164,23 +171,23 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="573838495"/>
+						<reference key="object" ref="151378865"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="769932284"/>
-							<reference ref="745581643"/>
+							<reference ref="265403529"/>
+							<reference ref="319154164"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="769932284"/>
-						<reference key="parent" ref="573838495"/>
+						<reference key="object" ref="265403529"/>
+						<reference key="parent" ref="151378865"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="745581643"/>
-						<reference key="parent" ref="573838495"/>
+						<reference key="object" ref="319154164"/>
+						<reference key="parent" ref="151378865"/>
 					</object>
 				</object>
 			</object>
@@ -221,7 +228,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">6</int>
+			<int key="maxID">7</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -229,6 +236,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">BT_LoadingController</string>
 					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">blackSquare</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">blackSquare</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">blackSquare</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/BT_LoadingController.h</string>
